Add `loras` parameter to `txt2img` and `img2img` routes
