# runner/openapi.json
@@ -461,6 +461,12 @@
                         "description": "Hugging Face model ID used for image generation.",
                         "default": ""
                     },
+                    "loras": {
+                        "type": "string",
+                        "title": "Loras",
+                        "description": "A lora and weight to use for image generation.",
+                        "default": ""
+                    },
                     "strength": {
                         "type": "number",
                         "title": "Strength",
@@ -732,6 +738,11 @@
                         "description": "Hugging Face model ID used for image generation.",
                         "default": ""
                     },
+                    "loras": {
+                        "type": "string",
+                        "title": "Loras",
+                        "description": "A lora and weight to use for image generation. example: { \"nerijs/pixel-art-xl\" : 1.2 } "
+                    },
                     "prompt": {
                         "type": "string",
                         "title": "Prompt",
@@ -787,6 +798,7 @@
                 },
                 "type": "object",
                 "required": [
+                    "loras",
                     "prompt"
                 ],
                 "title": "TextToImageParams"
